--- a/soruce/style/header.scss
+++ b/soruce/style/header.scss
@@ -1,9 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap");
+
 header {
-  height: 10vh;
+  height: 10.5vh;
   position: fixed;
   top: 0;
-  width: 80vw;
+  width: 100%;
+
   right: 0px;
   display: flex;
   border-bottom: 2px solid #000000;
